[package]
name = "ms_toollib"
version = "1.1.0"
description = "Algorithms  for Minesweeper"
documentation = "https://eee555.github.io/doc"
license = "MIT"
readme = "README.md"
keywords = ["minesweeper", "game", "eee555"]
edition = "2018"
authors = ["Wang Jianing <wangjianing@88.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version ="0.13.2", features = ["extension-module"] }
rand = "0.8.3"
itertools = "0.10.0"
async-std = { version = "1.7.0", features = ["attributes"] }
futures = "0.3.15"
tract-onnx = "0.14.2"

[dev-dependencies]
ms_toollib = { path = "." }

[lib]
name = "ms_toollib"
crate-type = ["cdylib"]








